@@ -2,8 +2,15 @@
   still won't put the file into the disty.  This is wrong.
   From Mark H Wilkinson <mhw@kremvax.demon.co.uk>
 
+* subdir warning for source files is bogus.  I removed it at Cygnus;
+  probably should remove it from net release
+
 * using "include" inside a conditional doesn't currently
   work properly.
+
+* examine possibility of using any character in a macro name
+  and rewriting names automatically.  this means we must rewrite
+  all references as well.
 
 * AM_CONFIG_HEADER might generate the wrong stamp file names
   when given multiple headers.  Write a test.
@@ -23,6 +30,7 @@
 * `distcheck' and `dist' should depend on `all'
 
 * Document why putting @FOO@ in _SOURCES doesn't work.
+  Make it an error when the user tries to do this
 
 * Add code to generate foo-config script like gnome, gtk
 
