@@ -256,8 +256,8 @@ $cygnus_mode = 0;
     (
      'AC_FEATURE_CTYPE', "use \`AC_HEADER_STDC'",
      'AC_FEATURE_ERRNO', "add \`strerror' to \`AC_REPLACE_FUNCS(...)'",
-     'AC_FEATURE_EXIT', 0,
-     'AC_SYSTEM_HEADER', 0,
+     'AC_FEATURE_EXIT', '',
+     'AC_SYSTEM_HEADER', '',
 
      # Note that we do not handle this one, because it is still run
      # from AM_CONFIG_HEADER.  So we deal with it specially in
@@ -4030,7 +4030,7 @@ sub scan_one_configure_file
 	if (/$obsolete_rx/o)
 	{
 	    local ($hint) = '';
-	    if ($obsolete_macros{$1})
+	    if ($obsolete_macros{$1} ne '')
 	    {
 		$hint = '; ' . $obsolete_macros{$1};
 	    }
