@@ -1,3 +1,9 @@
+1999-02-11  Tom Tromey  <tromey@cygnus.com>
+
+	* automake.in (obsolete_macros): Use empty string to indicate no
+	substitution.
+	(scan_one_configure_file): Likewise.
+
 1999-02-07  Paul Eggert  <eggert@twinsun.com>
 
 	* m4/ccstdc.m4 (AM_PROG_CC_STDC): Prefer -Ae to -Aa
